<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/contenedorFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="130sp"
            android:layout_height="130sp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo_img_may"
            android:contentDescription="@string/logo_imagen" />

        <ImageView
            android:id="@+id/imgLogoText"
            android:layout_width="match_parent"
            android:layout_height="45sp"
            android:layout_gravity="center"
            android:src="@drawable/logo_txt"
            android:scaleType="fitCenter"
            android:contentDescription="@string/texto_logo" />


        <TextView
            android:id="@+id/txtIniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="48sp"
            android:gravity="center"
            android:text="@string/iniciar_sesi_n"
            android:textColor="#1A7A5F"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/txtBienvenido"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:fontFamily="@font/opensans_bold"
            android:gravity="center"
            android:text="@string/bienvenido"
            android:textColor="#18AE00"
            android:textSize="30sp"
            tools:ignore="TextSizeCheck,TextContrastCheck" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="25sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresa_tu_correo_electr_nico"
            android:gravity="start"
            android:fontFamily="@font/opensans_light"
            android:textSize="14sp"
            android:paddingStart="60sp"
            android:paddingEnd="60sp"
            android:textColor="#000000"
            />

        <EditText
            android:id="@+id/EdText_Correo"
            android:layout_width="300sp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:autofillHints="emailAddress"
            android:backgroundTint="#00AA64"
            android:ems="10"
            android:fontFamily="@font/opensans_light"
            android:hint="@string/nombre_correo_com"
            android:inputType="textEmailAddress"
            android:paddingStart="8dp"
            android:paddingEnd="8sp"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ingresa_tu_contrase_a"
            android:gravity="start"
            android:fontFamily="@font/opensans_light"
            android:textSize="14sp"
            android:paddingStart="60sp"
            android:paddingEnd="60sp"
            android:layout_marginTop="10sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/EdText_Contrasena"
            android:layout_width="300sp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:autofillHints="password"
            android:backgroundTint="#00AA64"
            android:ems="10"
            android:fontFamily="@font/opensans_light"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:paddingStart="8dp"
            android:paddingEnd="8sp"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/Link_OlvidoContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/opensans_bold"
            android:gravity="end"
            android:paddingStart="53sp"
            android:paddingEnd="53sp"
            android:text="@string/olvidaste_tu_contrase_a"
            android:textColor="#689F38"
            android:textColorLink="#7FF066"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_Ingresar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:backgroundTint="#00C814"
            android:fontFamily="@font/opensans_bold"
            android:text="@string/ingresar"
            android:textSize="15sp"
            app:cornerRadius="10sp"
            tools:ignore="TextContrastCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:text="@string/no_tienes_cuenta"
                android:fontFamily="@font/opensans_light"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="15sp" />

            <Space
                android:layout_width="8sp"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/Link_CrearCuenta"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:fontFamily="@font/opensans_bold"
                android:gravity="center"
                android:text="@string/crear_una_cuenta"
                android:textColor="#34B200"
                android:textColorLink="#7FF066"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
        <!-- activity_main.xml -->


    </LinearLayout>

</ScrollView>


